--- a/style.css
+++ b/style.css
@@ -90,10 +90,8 @@ header {
 }
 
 .su-bg video {
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
