--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ header {
 .form-container {
     display: flex;
     width: 405px;
-    height: 450px;
+    height: auto;
     background-color: rgba(255, 255, 255, 0.75);
     backdrop-filter: blur(12px);
     border: 3px solid #000000;
@@ -78,6 +78,7 @@ header {
     flex-direction: column;
     align-items: center;    
     border-radius: 10px;
+    padding-bottom: 30px;
 }
 .su-bg {
     position: fixed;
