--- a/style.css
+++ b/style.css
@@ -151,6 +151,10 @@ header {
 .card {
     height: 410px;
 }
+.card-img, .card-img-bottom, .card-img-top {
+    width: 100%;
+    height: 400px;
+}
 .navbar .dropdown {
     margin-right: 1rem; /* Add space to the right of the Dropdown */
 }
